1. Метод .of [#70623]